--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Yudapedia - Toko Layanan Digital</title>
-
+   <link rel="icon" href="./logo.jpg" type="image/jpg" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -17,8 +17,7 @@
     <!-- Navbar -->
     <header class="navbar">
       <div class="navbar-left">
-        <!-- Logo kamu (optional) -->
-        <!-- Ganti src dengan file logo kamu -->
+        <!-- Logo kamu -->
         <img src="./logo.jpg" alt="Logo Yudapedia" class="navbar-logo" />
 
         <div class="brand">
@@ -34,14 +33,14 @@
         <a href="#produk" class="nav-link">Produk</a>
         <a href="#ketentuan" class="nav-link">Ketentuan</a>
 
-        <!-- TikTok (ganti nanti ke akunmu sendiri) -->
+        <!-- TikTok -->
         <a class="nav-icon" href="https://www.tiktok.com/@yuxdaxofficial" target="_blank" rel="noopener" title="TikTok">
           <svg viewBox="0 0 24 24" aria-hidden="true">
             <path d="M16.5 3a5.5 5.5 0 0 0 4 1.7V7a8.3 8.3 0 0 1-4-1.1v7.2a6.1 6.1 0 1 1-6.1-6.1c.3 0 .6 0 .9.1V9a2.9 2.9 0 1 0 2 2.7V3h3.2z"></path>
           </svg>
         </a>
 
-        <!-- WhatsApp Channel (ganti nanti ke channelmu sendiri) -->
+        <!-- WhatsApp Channel -->
         <a class="nav-icon" href="https://whatsapp.com/channel/0029VbAtxpXI1rcprIyQFD0y" target="_blank" rel="noopener" title="WhatsApp Channel">
           <svg viewBox="0 0 24 24" aria-hidden="true">
             <path d="M20 4.5A9 9 0 0 0 4.1 18.2L3 21.7l3.6-1A9 9 0 1 0 20 4.5Zm-8 14a7.1 7.1 0 0 1-3.6-1l-.3-.1-2.1.6.6-2-.2-.3A7.1 7.1 0 1 1 12 18.5Zm3.6-5.4c-.2-.1-1.2-.6-1.4-.7s-.3-.1-.5.1-.5.7-.7.8-.3.1-.5 0a5.7 5.7 0 0 1-3-2.6c-.1-.2 0-.3.1-.4l.3-.3.1-.3-.1-.4-0.4-1c-.1-.3-.3-.3-.5-.3h-.4a.8.8 0 0 0-.6.3 2.5 2.5 0 0 0-.8 1.8 2.9 2.9 0 0 0 .1.8 6 6 0 0 0 1.2 2.3 6.9 6.9 0 0 0 3.4 2.6 3.3 3.3 0 0 0 1.5.3c.6 0 1.1-.4 1.3-.8s.3-.8.2-.9-.2-.1-.4-.2Z"></path>
@@ -62,51 +61,66 @@
 
     <!-- Hero -->
     <section class="hero">
-      <div class="hero-main">
-        <div class="hero-badge float-soft">
-          <div class="dot-pulse"></div>
-          Order via WhatsApp & Telegram (/start)
-        </div>
-        <h1 class="hero-title">
-          Yudapedia<br />
-          <span class="gradient">Toko layanan digital</span>
-        </h1>
-        <p class="hero-subtitle">
-          Top up game, jasa sosmed, dan layanan digital lain.  
-          Kalau lewat bot Telegram, <strong>tekan /start dulu</strong> di @Yudapedia_bot.
-        </p>
-
-        <div class="hero-actions">
-          <a
-            href="https://wa.me/6285141110285?text=Halo%20kak,%20saya%20mau%20order%20di%20Yudapedia."
-            target="_blank"
-            rel="noopener noreferrer"
-            class="btn-primary"
-          >
-            Chat Admin WA
-          </a>
-          <a
-            href="https://t.me/Yudapedia_bot"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="btn-ghost"
-          >
-            Buka Bot Telegram (/start)
-          </a>
-        </div>
-
-        <div class="hero-meta">
-          <div>
-            <strong>Respon cepat</strong><br />
-            09.00 - 22.00 WIB
+      <div class="hero-inner">
+        <!-- Kiri: teks -->
+        <div class="hero-main">
+          <div class="hero-badge float-soft">
+            <div class="dot-pulse"></div>
+            Order via WhatsApp & Telegram (/start)
           </div>
-          <div>
-            <strong>Metode bayar</strong><br />
-            E-wallet & bank
+          <h1 class="hero-title">
+            Yudapedia<br />
+            <span class="gradient">Toko layanan digital</span>
+          </h1>
+          <p class="hero-subtitle">
+            Top up game, jasa sosmed, dan layanan digital lain.  
+            Kalau lewat bot Telegram, <strong>tekan /start dulu</strong> di @Yudapedia_bot.
+          </p>
+
+          <div class="hero-actions">
+            <a
+              href="https://wa.me/6285141110285?text=Halo%20kak,%20saya%20mau%20order%20di%20Yudapedia."
+              target="_blank"
+              rel="noopener noreferrer"
+              class="btn-primary"
+            >
+              Chat Admin WA
+            </a>
+            <a
+              href="https://t.me/Yudapedia_bot"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="btn-ghost"
+            >
+              Buka Bot Telegram (/start)
+            </a>
           </div>
-          <div>
-            <strong>Ikuti update</strong><br />
-            TikTok & Channel WA
+
+          <div class="hero-meta">
+            <div>
+              <strong>Respon cepat</strong><br />
+              09.00 - 22.00 WIB
+            </div>
+            <div>
+              <strong>Metode bayar</strong><br />
+              E-wallet
+            </div>
+            <div>
+              <strong>Ikuti update</strong><br />
+              TikTok & Channel WA
+            </div>
+          </div>
+        </div>
+
+        <!-- Kanan: foto coding -->
+        <div class="hero-visual float-soft">
+          <div class="hero-visual-inner">
+            <!-- ganti nama file kalau beda -->
+            <img src="./coding.png" alt="Ilustrasi coding / panel digital" />
+          </div>
+          <div class="hero-visual-tag">
+            <span>Yudapedia Panel</span>
+            <span>Digital service • Realtime</span>
           </div>
         </div>
       </div>
@@ -126,9 +140,9 @@
         <!-- TOP UP GAME -->
         <article class="product-card reveal float-soft">
           <div class="product-label">Top up game</div>
-          <div class="product-name">FREE FIRE </div>
+          <div class="product-name">FREE FIRE</div>
           <p class="product-desc">
-            Top up cepat, Dm masuk beberapa menit.
+            Top up cepat, DM masuk beberapa menit.
           </p>
           <div class="product-meta">
             <span class="product-price">Mulai dari 1.232</span>
@@ -137,7 +151,7 @@
           <div class="product-actions">
             <a
               class="btn-order wa-btn"
-              href="https://wa.me/6285141110285?text=Halo%20kak,%20saya%20mau%20top%20up%20Game%20%20Mohon%20info%20harga."
+              href="https://wa.me/6285141110285?text=Halo%20kak,%20saya%20mau%20top%20up%20FREE%20FIRE.%20Mohon%20info%20harga."
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -149,16 +163,16 @@
               target="_blank"
               rel="noopener noreferrer"
             >
-              Tele: /start lalu pilih A
+              Tele: /start lalu pilih FF
             </a>
           </div>
         </article>
 
         <article class="product-card reveal float-soft">
           <div class="product-label">Top up game</div>
-          <div class="product-name">Top Up MOBILE LEGENDS</div>
+          <div class="product-name">MOBILE LEGENDS</div>
           <p class="product-desc">
-           Top up cepat, Dm masuk beberapa menit.
+            Top up cepat, DM masuk beberapa menit.
           </p>
           <div class="product-meta">
             <span class="product-price">Mulai dari 5.000</span>
@@ -167,7 +181,7 @@
           <div class="product-actions">
             <a
               class="btn-order wa-btn"
-              href="https://wa.me/6285141110285?text=Halo%20kak,%20minta%20list%20harga%20Top%20Up%20Game%20"
+              href="https://wa.me/6285141110285?text=Halo%20kak,%20minta%20list%20harga%20Top%20Up%20MOBILE%20LEGENDS."
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -179,16 +193,16 @@
               target="_blank"
               rel="noopener noreferrer"
             >
-              Tele: /start lalu pilih B
+              Tele: /start lalu pilih ML
             </a>
           </div>
         </article>
 
         <article class="product-card reveal float-soft">
           <div class="product-label">Top up game</div>
-          <div class="product-name">Top Up PUGB</div>
+          <div class="product-name">PUBG MOBILE</div>
           <p class="product-desc">
-           Top up cepat, Dm masuk beberapa menit.
+            Top up cepat, UC masuk beberapa menit.
           </p>
           <div class="product-meta">
             <span class="product-price">Mulai dari 15.000</span>
@@ -197,7 +211,7 @@
           <div class="product-actions">
             <a
               class="btn-order wa-btn"
-              href="https://wa.me/6285141110285?text=Halo%20kak,%20minta%20harga%20Top%20Up%20Game%20"
+              href="https://wa.me/6285141110285?text=Halo%20kak,%20minta%20harga%20Top%20Up%20PUBG."
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -209,7 +223,7 @@
               target="_blank"
               rel="noopener noreferrer"
             >
-              Tele: /start lalu pilih C
+              Tele: /start lalu pilih PUBG
             </a>
           </div>
         </article>
@@ -228,7 +242,7 @@
           <div class="product-actions">
             <a
               class="btn-order wa-btn"
-              href="https://wa.me/6285141110285?text=Halo%20kak,%20mau%20jasa%20optimasi%20Instagram."
+              href="https://wa.me/6285141110285?text=Halo%20kak,%20mau%20layanan%20Instagram."
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -247,10 +261,10 @@
 
         <article class="product-card reveal float-soft">
           <div class="product-label">Sosial media</div>
-          <div class="product-name">Layanan Tiktok</div>
+          <div class="product-name">Layanan TikTok</div>
           <p class="product-desc">
-         Rapihin bio, highlight, dan tampilan profil.
-        </p>
+            Rapihin bio & tampilan profil TikTok.
+          </p>
           <div class="product-meta">
             <span class="product-price">Mulai dari 5.000</span>
             <span class="product-tag">Paket konten</span>
@@ -258,7 +272,7 @@
           <div class="product-actions">
             <a
               class="btn-order wa-btn"
-              href="https://wa.me/6285141110285?text=Halo%20kak,%20mau%20jasa%20jadwal%20konten%20bulanan."
+              href="https://wa.me/6285141110285?text=Halo%20kak,%20mau%20layanan%20TikTok."
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -270,25 +284,25 @@
               target="_blank"
               rel="noopener noreferrer"
             >
-              Tele: /start lalu pilih konten
+              Tele: /start lalu pilih TikTok
             </a>
           </div>
         </article>
 
         <article class="product-card reveal float-soft">
           <div class="product-label">Sosial media</div>
-          <div class="product-name">WhatsApp</div>
+          <div class="product-name">Layanan WhatsApp</div>
           <p class="product-desc">
-           Memperbaiki kualitas ch 
+            Memperbaiki & mengoptimalkan kualitas channel/akun WhatsApp.
           </p>
           <div class="product-meta">
-            <span class="product-price">Harga mulai dari 5.000 </span>
+            <span class="product-price">Mulai dari 5.000</span>
             <span class="product-tag">Custom</span>
           </div>
           <div class="product-actions">
             <a
               class="btn-order wa-btn"
-              href="https://wa.me/6285141110285?text=Halo%20kak,%20mau%20konsultasi%20konten."
+              href="https://wa.me/6285141110285?text=Halo%20kak,%20mau%20layanan%20WhatsApp."
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -300,7 +314,7 @@
               target="_blank"
               rel="noopener noreferrer"
             >
-              Tele: /start lalu pilih konsultasi
+              Tele: /start lalu pilih WhatsApp
             </a>
           </div>
         </article>
@@ -313,7 +327,7 @@
             Akun premium resmi, list bisa ditanya ke admin.
           </p>
           <div class="product-meta">
-            <span class="product-price">Mulai dari 30.000</span>
+            <span class="product-price">Mulai dari 20.000</span>
             <span class="product-tag">Official</span>
           </div>
           <div class="product-actions">
@@ -343,7 +357,7 @@
             Setup dasar email, cloud, dan tools kerja.
           </p>
           <div class="product-meta">
-            <span class="product-price">Mulai dari 40.000</span>
+            <span class="product-price">Mulai dari 50.000</span>
             <span class="product-tag">Support</span>
           </div>
           <div class="product-actions">
@@ -416,7 +430,7 @@
           <ol class="info-list">
             <li>Pilih produk yang sesuai.</li>
             <li>
-              Kalau via WA: klik <strong>Order via WA</strong>. ( Disarankan )<br />
+              Kalau via WA: klik <strong>Order via WA</strong>. (disarankan)<br />
               Kalau via Telegram: buka <strong>@Yudapedia_bot</strong>, tekan <strong>/start</strong>, lalu pilih menu produk.
             </li>
             <li>Kirim data yang diminta.</li>
@@ -478,8 +492,8 @@
             <li>Proses dimulai setelah pembayaran terkonfirmasi.</li>
             <li>Kesalahan data (ID/username) di luar tanggung jawab admin.</li>
             <li>Komplain hanya diproses dengan bukti lengkap (chat & bukti bayar).</li>
-            <li>Datang dengan niat beli tanpa PHP ( nanya dulu boleh ).</li>
-            <li>Disarnkan chat admin lewat WhatsApp karena lebih jelas</li>
+            <li>Datang dengan niat beli tanpa PHP (nanya dulu boleh).</li>
+            <li>Disarankan chat admin lewat WhatsApp karena lebih jelas.</li>
           </ul>
         </div>
         <p class="footer-copy">
