--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
+<head><meta name="twitter:description" content="Yudapedia - Yudapedia - Toko Layanan Digital. Layanan digital, top up game, dan jasa lainnya yang cepat, aman, dan terpercaya.">
+<meta name="twitter:title" content="Yudapedia - Toko Layanan Digital">
+<meta name="twitter:card" content="summary">
+<meta property="og:site_name" content="Yudapedia">
+<meta property="og:type" content="website">
+<meta property="og:description" content="Yudapedia - Yudapedia - Toko Layanan Digital. Layanan digital, top up game, dan jasa lainnya yang cepat, aman, dan terpercaya.">
+<meta property="og:title" content="Yudapedia - Toko Layanan Digital">
+<meta name="robots" content="index, follow">
+<meta name="keywords" content="yudapedia, top up game, layanan digital, jasa sosial media, murah, terpercaya">
+<meta name="description" content="Yudapedia - Yudapedia - Toko Layanan Digital. Layanan digital, top up game, dan jasa lainnya yang cepat, aman, dan terpercaya.">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Yudapedia - Toko Layanan Digital</title>
    <link rel="icon" href="./logo.jpg" type="image/jpg" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Organization", "name": "Yudapedia", "url": "https://www.yudapedia.store", "description": "Layanan digital, top up game, dan jasa sosial media terpercaya."}</script>
 </head>
 <body>
   <!-- Glow yang gerak-gerak -->
